# monitor-subastas-valencia

./: .env.example  .env.launchd.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
apps/: monitor_runner.py  monitor_runner_web.py
scripts/: audit_parsed_auctions.py  audit_postal_codes.py  backfill_municipality_from_postal_code.py  install_launchd_weekly.sh  investigate_completed_final_bid.py  load_completed_boe_data.py  load_sample_boe_data.py  load_upcoming_boe_data.py  monitor_dashboard.py  open_monitor_app.command  run_full_monitor_cycle.py  run_monitor_cycle.py  run_weekly.sh  send_opportunities_telegram.py  smoke_test_monitor.py  start_local_monitor_services.sh  trace_auction_mapping.py  trace_completed_fields.py  trace_multi_lot_capture.py  uninstall_launchd_weekly.sh
scripts/boe_cases/: README.md  create_case.py  sanitize_case.py  sanitizer.py
scripts/launchd/: com.carlosblanco.monitor-subastas-valencia.weekly.plist
tests/: boe_case_loader.py  test_audit.py  test_audit_postal_codes.py  test_backfill.py  test_boe.py  test_boe_case_sanitizer.py  test_boe_fixture_integrity.py  test_domain_enrich.py  test_domain_filters.py  test_domain_rules.py  test_domain_scoring.py  test_exports.py  test_load_completed_boe_data.py  test_load_sample_boe_data.py  test_location.py  test_monitor_dashboard_helpers.py  test_normalize_dedupe.py  test_pipeline_evaluate.py  test_pipeline_ranking.py  test_run_full_monitor_cycle.py  test_runner_progress.py  test_scoring.py  test_send_opportunities_telegram.py  test_status.py  test_storage.py
(+57 files in other folders)
